# scraping-machine

./: README.md  docker-compose.yml  run_crawler.sh
analysis/: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
analysis/data/AAAI2023/AAAI/: author_item_relations.parquet  authors.parquet  items.parquet  keyword_item_relations.parquet  keywords.parquet
analysis/data/AAAI2023/posters/: author_item_relations.parquet  authors.parquet  items.parquet
analysis/data/ICML2022/: author_item_relations.parquet  authors.parquet  items.parquet  keyword_item_relations.parquet  keywords.parquet
analysis/data/NeurIPS2022/: answers.csv  author_item_relations.parquet  authors.parquet  context_disagreement_assessment.csv  items.parquet  keyword_item_relations.parquet  keywords.parquet  manual_labels.csv  neurips_output.csv  threat_disagreement_assessment.csv
analysis/notebooks/: aaai.ipynb  analysis_icml.ipynb  dump_db_to_parquet.ipynb
db/: Dockerfile  README.md  create.sql
scraper/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
scraper/scraper/: db.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
scraper/scraper/spiders/: __init__.py  aaai_crawler.py  icml_crawler.py  neurips_crawler.py
